fix gap

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ main .user {
 main .singolo {
     position: relative;
     flex: 0 0 ((100% / 10) - 0.3em);
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
 }
 
 main .singolo .nome {
